src/main/gen/cn/codetector/tablegenintellij/parser/TableGenParser.java
// This is a generated file. Not intended for manual editing.
package cn.codetector.tablegenintellij.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static cn.codetector.tablegenintellij.psi.TableGenTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class TableGenParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return tableGenFile(b, l + 1);
  }

  /* ********************************************************** */
  // KeywordAssert conditionFunction "," STRING ";"
  public static boolean assertStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertStmt")) return false;
    if (!nextTokenIs(b, KEYWORDASSERT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KEYWORDASSERT);
    r = r && conditionFunction(b, l + 1);
    r = r && consumeToken(b, ",");
    r = r && consumeToken(b, STRING);
    r = r && consumeToken(b, ";");
    exit_section_(b, m, ASSERT_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // bangOperator ('<' type '>')? '(' valueListNE ')'
  public static boolean bangFunction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bangFunction")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BANG_FUNCTION, "<bang function>");
    r = bangOperator(b, l + 1);
    r = r && bangFunction_1(b, l + 1);
    r = r && consumeToken(b, "(");
    r = r && valueListNE(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('<' type '>')?
  private static boolean bangFunction_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bangFunction_1")) return false;
    bangFunction_1_0(b, l + 1);
    return true;
  }

  // '<' type '>'
  private static boolean bangFunction_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bangFunction_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "<");
    r = r && type(b, l + 1);
    r = r && consumeToken(b, ">");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // BangAdd
  //                 | BangAnd
  //                 | BangCast
  //                 | BangCon
  //                 | BangDag
  //                 | BangDiv
  //                 | BangEmpty
  //                 | BangEq
  //                 | BangExists
  //                 | BangFilter
  //                 | BangFind
  //                 | BangFoldl
  //                 | BangForeach
  //                 | BangGe
  //                 | BangGetdagop
  //                 | BangGt
  //                 | BangHead
  //                 | BangIf
  //                 | BangInterleave
  //                 | BangIsa
  //                 | BangLe
  //                 | BangListConcat
  //                 | BangListRemove
  //                 | BangListSplat
  //                 | BangLogTwo
  //                 | BangLt
  //                 | BangMul
  //                 | BangNe
  //                 | BangNot
  //                 | BangOr
  //                 | BangRange
  //                 | BangSetdagop
  //                 | BangShl
  //                 | BangSize
  //                 | BangSra
  //                 | BangSrl
  //                 | BangStrConcat
  //                 | BangSub
  //                 | BangSubst
  //                 | BangSubstr
  //                 | BangTail
  //                 | BangToLower
  //                 | BangToUpper
  //                 | BangXor
  public static boolean bangOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bangOperator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BANG_OPERATOR, "<bang operator>");
    r = consumeToken(b, BANGADD);
    if (!r) r = consumeToken(b, BANGAND);
    if (!r) r = consumeToken(b, BANGCAST);
    if (!r) r = consumeToken(b, BANGCON);
    if (!r) r = consumeToken(b, BANGDAG);
    if (!r) r = consumeToken(b, BANGDIV);
    if (!r) r = consumeToken(b, BANGEMPTY);
    if (!r) r = consumeToken(b, BANGEQ);
    if (!r) r = consumeToken(b, BANGEXISTS);
    if (!r) r = consumeToken(b, BANGFILTER);
    if (!r) r = consumeToken(b, BANGFIND);
    if (!r) r = consumeToken(b, BANGFOLDL);
    if (!r) r = consumeToken(b, BANGFOREACH);
    if (!r) r = consumeToken(b, BANGGE);
    if (!r) r = consumeToken(b, BANGGETDAGOP);
    if (!r) r = consumeToken(b, BANGGT);
    if (!r) r = consumeToken(b, BANGHEAD);
    if (!r) r = consumeToken(b, BANGIF);
    if (!r) r = consumeToken(b, BANGINTERLEAVE);
    if (!r) r = consumeToken(b, BANGISA);
    if (!r) r = consumeToken(b, BANGLE);
    if (!r) r = consumeToken(b, BANGLISTCONCAT);
    if (!r) r = consumeToken(b, BANGLISTREMOVE);
    if (!r) r = consumeToken(b, BANGLISTSPLAT);
    if (!r) r = consumeToken(b, BANGLOGTWO);
    if (!r) r = consumeToken(b, BANGLT);
    if (!r) r = consumeToken(b, BANGMUL);
    if (!r) r = consumeToken(b, BANGNE);
    if (!r) r = consumeToken(b, BANGNOT);
    if (!r) r = consumeToken(b, BANGOR);
    if (!r) r = consumeToken(b, BANGRANGE);
    if (!r) r = consumeToken(b, BANGSETDAGOP);
    if (!r) r = consumeToken(b, BANGSHL);
    if (!r) r = consumeToken(b, BANGSIZE);
    if (!r) r = consumeToken(b, BANGSRA);
    if (!r) r = consumeToken(b, BANGSRL);
    if (!r) r = consumeToken(b, BANGSTRCONCAT);
    if (!r) r = consumeToken(b, BANGSUB);
    if (!r) r = consumeToken(b, BANGSUBST);
    if (!r) r = consumeToken(b, BANGSUBSTR);
    if (!r) r = consumeToken(b, BANGTAIL);
    if (!r) r = consumeToken(b, BANGTOLOWER);
    if (!r) r = consumeToken(b, BANGTOUPPER);
    if (!r) r = consumeToken(b, BANGXOR);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BIN_INT
  public static boolean binaryInt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binaryInt")) return false;
    if (!nextTokenIs(b, BIN_INT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BIN_INT);
    exit_section_(b, m, BINARY_INT, r);
    return r;
  }

  /* ********************************************************** */
  // ";" | "{" bodyList "}"
  public static boolean body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "body")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BODY, "<body>");
    r = consumeToken(b, ";");
    if (!r) r = body_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // "{" bodyList "}"
  private static boolean body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "body_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "{");
    r = r && bodyList(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // declaration ";"
  //              | KeywordLet IDENTIFIER ["{" rangeList "}"] "=" value ";"
  //              | KeywordDefVar IDENTIFIER "=" value ";"
  //              | assertStmt
  public static boolean bodyItem(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bodyItem")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BODY_ITEM, "<body item>");
    r = bodyItem_0(b, l + 1);
    if (!r) r = bodyItem_1(b, l + 1);
    if (!r) r = bodyItem_2(b, l + 1);
    if (!r) r = assertStmt(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // declaration ";"
  private static boolean bodyItem_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bodyItem_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = declaration(b, l + 1);
    r = r && consumeToken(b, ";");
    exit_section_(b, m, null, r);
    return r;
  }

  // KeywordLet IDENTIFIER ["{" rangeList "}"] "=" value ";"
  private static boolean bodyItem_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bodyItem_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KEYWORDLET, IDENTIFIER);
    r = r && bodyItem_1_2(b, l + 1);
    r = r && consumeToken(b, "=");
    r = r && value(b, l + 1);
    r = r && consumeToken(b, ";");
    exit_section_(b, m, null, r);
    return r;
  }

  // ["{" rangeList "}"]
  private static boolean bodyItem_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bodyItem_1_2")) return false;
    bodyItem_1_2_0(b, l + 1);
    return true;
  }

  // "{" rangeList "}"
  private static boolean bodyItem_1_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bodyItem_1_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "{");
    r = r && rangeList(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, null, r);
    return r;
  }

  // KeywordDefVar IDENTIFIER "=" value ";"
  private static boolean bodyItem_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bodyItem_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KEYWORDDEFVAR, IDENTIFIER);
    r = r && consumeToken(b, "=");
    r = r && value(b, l + 1);
    r = r && consumeToken(b, ";");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // bodyItem*
  public static boolean bodyList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bodyList")) return false;
    Marker m = enter_section_(b, l, _NONE_, BODY_LIST, "<body list>");
    while (true) {
      int c = current_position_(b);
      if (!bodyItem(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bodyList", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean classID(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classID")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, CLASS_ID, r);
    return r;
  }

  /* ********************************************************** */
  // (classID | multiClassID) ("<" valueList? ">")?
  public static boolean classRef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classRef")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = classRef_0(b, l + 1);
    r = r && classRef_1(b, l + 1);
    exit_section_(b, m, CLASS_REF, r);
    return r;
  }

  // classID | multiClassID
  private static boolean classRef_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classRef_0")) return false;
    boolean r;
    r = classID(b, l + 1);
    if (!r) r = multiClassID(b, l + 1);
    return r;
  }

  // ("<" valueList? ">")?
  private static boolean classRef_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classRef_1")) return false;
    classRef_1_0(b, l + 1);
    return true;
  }

  // "<" valueList? ">"
  private static boolean classRef_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classRef_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "<");
    r = r && classRef_1_0_1(b, l + 1);
    r = r && consumeToken(b, ">");
    exit_section_(b, m, null, r);
    return r;
  }

  // valueList?
  private static boolean classRef_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classRef_1_0_1")) return false;
    valueList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // KeywordClass IDENTIFIER templateArgList? recordBody
  public static boolean classStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classStmt")) return false;
    if (!nextTokenIs(b, KEYWORDCLASS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KEYWORDCLASS, IDENTIFIER);
    r = r && classStmt_2(b, l + 1);
    r = r && recordBody(b, l + 1);
    exit_section_(b, m, CLASS_STMT, r);
    return r;
  }

  // templateArgList?
  private static boolean classStmt_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classStmt_2")) return false;
    templateArgList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // value ":" value
  public static boolean condClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condClause")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COND_CLAUSE, "<cond clause>");
    r = value(b, l + 1);
    r = r && consumeToken(b, ":");
    r = r && value(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // CONDITION
  public static boolean condOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condOperator")) return false;
    if (!nextTokenIs(b, CONDITION)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONDITION);
    exit_section_(b, m, COND_OPERATOR, r);
    return r;
  }

  /* ********************************************************** */
  // condOperator '(' condClause (',' condClause)* ')'
  public static boolean conditionFunction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionFunction")) return false;
    if (!nextTokenIs(b, CONDITION)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = condOperator(b, l + 1);
    r = r && consumeToken(b, "(");
    r = r && condClause(b, l + 1);
    r = r && conditionFunction_3(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, m, CONDITION_FUNCTION, r);
    return r;
  }

  // (',' condClause)*
  private static boolean conditionFunction_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionFunction_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!conditionFunction_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "conditionFunction_3", c)) break;
    }
    return true;
  }

  // ',' condClause
  private static boolean conditionFunction_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionFunction_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && condClause(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // value (':' VARNAME)? | VARNAME
  public static boolean dagArg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dagArg")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DAG_ARG, "<dag arg>");
    r = dagArg_0(b, l + 1);
    if (!r) r = consumeToken(b, VARNAME);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // value (':' VARNAME)?
  private static boolean dagArg_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dagArg_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = value(b, l + 1);
    r = r && dagArg_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (':' VARNAME)?
  private static boolean dagArg_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dagArg_0_1")) return false;
    dagArg_0_1_0(b, l + 1);
    return true;
  }

  // ':' VARNAME
  private static boolean dagArg_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dagArg_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ":");
    r = r && consumeToken(b, VARNAME);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // dagArg (',' dagArg)*
  public static boolean dagArgList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dagArgList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DAG_ARG_LIST, "<dag arg list>");
    r = dagArg(b, l + 1);
    r = r && dagArgList_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' dagArg)*
  private static boolean dagArgList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dagArgList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!dagArgList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dagArgList_1", c)) break;
    }
    return true;
  }

  // ',' dagArg
  private static boolean dagArgList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dagArgList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && dagArg(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ["-"] DEC_INT
  public static boolean decimalInteger(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decimalInteger")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECIMAL_INTEGER, "<decimal integer>");
    r = decimalInteger_0(b, l + 1);
    r = r && consumeToken(b, DEC_INT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ["-"]
  private static boolean decimalInteger_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decimalInteger_0")) return false;
    consumeToken(b, "-");
    return true;
  }

  /* ********************************************************** */
  // ([KeywordField] type | KeywordCode) IDENTIFIER ("=" value)?
  public static boolean declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECLARATION, "<declaration>");
    r = declaration_0(b, l + 1);
    r = r && consumeToken(b, IDENTIFIER);
    r = r && declaration_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [KeywordField] type | KeywordCode
  private static boolean declaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = declaration_0_0(b, l + 1);
    if (!r) r = consumeToken(b, KEYWORDCODE);
    exit_section_(b, m, null, r);
    return r;
  }

  // [KeywordField] type
  private static boolean declaration_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = declaration_0_0_0(b, l + 1);
    r = r && type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [KeywordField]
  private static boolean declaration_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration_0_0_0")) return false;
    consumeToken(b, KEYWORDFIELD);
    return true;
  }

  // ("=" value)?
  private static boolean declaration_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration_2")) return false;
    declaration_2_0(b, l + 1);
    return true;
  }

  // "=" value
  private static boolean declaration_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "=");
    r = r && value(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // KeywordDefset type IDENTIFIER "=" "{" statement* "}"
  public static boolean defSetStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defSetStmt")) return false;
    if (!nextTokenIs(b, KEYWORDDEFSET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KEYWORDDEFSET);
    r = r && type(b, l + 1);
    r = r && consumeToken(b, IDENTIFIER);
    r = r && consumeToken(b, "=");
    r = r && consumeToken(b, "{");
    r = r && defSetStmt_5(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, DEF_SET_STMT, r);
    return r;
  }

  // statement*
  private static boolean defSetStmt_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defSetStmt_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "defSetStmt_5", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // KeywordDef value? recordBody
  public static boolean defStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defStmt")) return false;
    if (!nextTokenIs(b, KEYWORDDEF)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KEYWORDDEF);
    r = r && defStmt_1(b, l + 1);
    r = r && recordBody(b, l + 1);
    exit_section_(b, m, DEF_STMT, r);
    return r;
  }

  // value?
  private static boolean defStmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defStmt_1")) return false;
    value(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // KeywordDefm [value] parentClassList ";"
  public static boolean defmStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defmStmt")) return false;
    if (!nextTokenIs(b, KEYWORDDEFM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KEYWORDDEFM);
    r = r && defmStmt_1(b, l + 1);
    r = r && parentClassList(b, l + 1);
    r = r && consumeToken(b, ";");
    exit_section_(b, m, DEFM_STMT, r);
    return r;
  }

  // [value]
  private static boolean defmStmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defmStmt_1")) return false;
    value(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // KeywordDefVar IDENTIFIER "=" value ";"
  public static boolean defvarStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defvarStmt")) return false;
    if (!nextTokenIs(b, KEYWORDDEFVAR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KEYWORDDEFVAR, IDENTIFIER);
    r = r && consumeToken(b, "=");
    r = r && value(b, l + 1);
    r = r && consumeToken(b, ";");
    exit_section_(b, m, DEFVAR_STMT, r);
    return r;
  }
